--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,16 @@
         "magento/product-community-edition": "2.3.1"
     },
     "require-dev": {
+        "allure-framework/allure-phpunit": "~1.2.0",
         "friendsofphp/php-cs-fixer": "~2.13.0",
+        "khoazero123/module-dev-fix": "^0.0.2",
         "lusitanian/oauth": "~0.8.10",
         "magento/magento2-functional-testing-framework": "~2.3.13",
         "pdepend/pdepend": "2.5.2",
         "phpmd/phpmd": "@stable",
         "phpunit/phpunit": "~6.5.0",
         "sebastian/phpcpd": "~3.0.0",
-        "squizlabs/php_codesniffer": "3.3.1",
-        "allure-framework/allure-phpunit": "~1.2.0"
+        "squizlabs/php_codesniffer": "3.3.1"
     },
     "conflict": {
         "gene/bluefoot": "*"
